Add personal data to .env file

--- a/strava_api.ipynb
+++ b/strava_api.ipynb
@@ -9,19 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
     "import logging\n",
+    "import os\n",
     "from typing import Any, Dict\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "\n",
-    "code = '9fdb50897059d33410dcdf6e3955f93b3d76e46a'\n",
-    "url = f\"https://www.strava.com/oauth/token?client_id=150699&client_secret=08382f68c9503560ef60005685a79ecc3671e86d&code={code}&grant_type=authorization_code\"\n",
+    "load_dotenv()\n",
+    "\n",
+    "client_id = os.getenv('CLIENT_ID')\n",
+    "client_secret = os.getenv('CLIENT_SECRET')\n",
+    "code = os.getenv('CODE')\n",
+    "url = f\"https://www.strava.com/oauth/token?client_id={client_id}&client_secret={client_secret}&code={code}&grant_type=authorization_code\"\n",
     "\n",
     "request_made = False\n",
     "\n",
@@ -43,73 +49,39 @@
     "            return result_dict\n",
     "\n",
     "        except requests.exceptions.HTTPError as http_err:\n",
-    "            # logging.error(\"HTTP error occurred: %s\", http_err)\n",
-    "            logging.error(\"HTTP error occurred:\")\n",
-    "            raise http_err\n",
+    "            logging.error(\"HTTP error occurred: %s\", http_err)\n",
     "        except Exception as err:\n",
-    "            # logging.error(\"An error occurred: %s\", err)\n",
-    "            logging.error(\"An error occurred:\")\n",
-    "            raise err\n",
+    "            logging.error(\"An error occurred: %s\", err)\n",
     "    else:\n",
-    "        logging.warning(\"Request has already been made. Please use a different code.\")"
+    "        logging.warning(\"Request has already been made. Please use a different code.\")\n",
+    "        pass\n",
+    "\n",
+    "result = get_strava_tokens()\n",
+    "\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     print(json.dumps(get_strava_tokens()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = get_strava_tokens()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'token_type': 'Bearer',\n",
-       " 'expires_at': 1741194232,\n",
-       " 'expires_in': 18006,\n",
-       " 'refresh_token': '853b550fc7f378cd8f51ca5d71bba1d3c2d92dd2',\n",
-       " 'access_token': 'b9e3f3b47dfcfc66c5add37d25ef273d42c57e6e',\n",
-       " 'athlete': {'id': 34557292,\n",
-       "  'username': None,\n",
-       "  'resource_state': 2,\n",
-       "  'firstname': 'Just',\n",
-       "  'lastname': 'Sala',\n",
-       "  'bio': None,\n",
-       "  'city': None,\n",
-       "  'state': None,\n",
-       "  'country': None,\n",
-       "  'sex': 'M',\n",
-       "  'premium': False,\n",
-       "  'summit': False,\n",
-       "  'created_at': '2018-09-06T10:04:45Z',\n",
-       "  'updated_at': '2021-01-24T15:21:00Z',\n",
-       "  'badge_type_id': 0,\n",
-       "  'weight': 0.0,\n",
-       "  'profile_medium': 'https://lh3.googleusercontent.com/a/ACg8ocKaJhohmi4NHiCFoUeLTTdiA7aSmzXSor5GzBGpDN6RxGyjqz7N=s96-c',\n",
-       "  'profile': 'https://lh3.googleusercontent.com/a/ACg8ocKaJhohmi4NHiCFoUeLTTdiA7aSmzXSor5GzBGpDN6RxGyjqz7N=s96-c',\n",
-       "  'friend': None,\n",
-       "  'follower': None}}"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
     }
    ],
    "source": [
-    "result"
+    "print(type(result))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,27 +96,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1741194232\n",
-      "2025-03-05 18:03:52\n",
-      "34557292\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(strava_token_expires_at)\n",
-    "print(strava_token_expires_at_utc_timestamp)\n",
-    "print(strava_athlete_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -156,36 +107,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'message': 'Bad Request', 'errors': [{'resource': 'AuthorizationCode', 'field': 'code', 'code': 'invalid'}]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "import json\n",
-    "\n",
-    "code = '7d5d966e985c79e3537db6bcbed7f12081a82efd'\n",
-    "url = f\"https://www.strava.com/oauth/token?client_id=150699&client_secret=08382f68c9503560ef60005685a79ecc3671e86d&code={code}&grant_type=authorization_code\"\n",
-    "\n",
-    "\n",
-    "payload = {}\n",
-    "headers = {}\n",
-    "\n",
-    "response = requests.request(\"POST\", url, headers=headers, data=payload)\n",
-    "\n",
-    "dict_result = json.loads(response.text)\n",
-    "print(dict_result)"
-   ]
   },
   {
    "cell_type": "code",
